# ayush-ai-internal

./: docker-compose.yml  main.py  pyproject.toml
safeguard_app/service/kafka_lib/: config.py
safeguard_app/service/kafka_lib/producer/: producer.py  producer_service.py
safeguard_app/service/kafka_service/consumer_service/: app.py
safeguard_app/service/kafka_service/producer_serivce/: app.py
safeguard_app/service/kafka_service_old/consumer_service/: app.py
safeguard_app/service/kafka_service_old/producer_serivce/: app.py  app1.py
